요청사항 수정 중 1차 커밋

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -163,7 +163,7 @@ $(function() {
 		artstInfoHtml2 += '</div>';
 		artstInfoHtml2 += '<div class="ad-sty">';
 		//artstInfoHtml2 += '<div class="ad-user"><img src="resources/img/icon/user-2.png" /></div>';
-		artstInfoHtml2 += '<div class="ad-user"><img src="'+ artstInfo.artistInfo.artstProfileImgUrl +'" /></div>';
+		artstInfoHtml2 += '<div class="ad-user" style="margin-bottom:100px;"><img src="'+ artstInfo.artistInfo.artstProfileImgUrl +'"/></div>';
 		artstInfoHtml += '<div class="ad-text">';
 		artstInfoHtml += '	<h3>'+ artstInfo.artistInfo.artstActvtyNm +'</h3>';
 		artstInfoHtml += '	<h4>'+ artstInfo.artistInfo.artstEnglsNm +'</h4>';
