--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -174,7 +174,7 @@ html, body{font-size: calc(100vw / 152);}
 }
 
 .body-wrap{
-    padding-top: 21rem;
+    padding-top: 19rem;
 }
 .contents{}
 
@@ -5179,3 +5179,11 @@ position: relative;background-color: #fbfbfb;}
 .mobile-con-wrap .con-left .panel-group .panel.active a{color: #fff;}
 .mobile-con-wrap .con-left .panel-group .panel-title{font-size: 2.8rem;}
 .mobile-con-wrap .con-right{display: block;width: 100%;margin: 0 auto;max-width: 100% !important;}
+
+
+/* 0526 */
+.cont-title3 h3 span {
+    font-size: 2.5rem;
+    padding-left: 15px;
+    color: #ccc
+}
