--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -122,19 +122,16 @@ function myCollectionList(){
 			if(result[i].dealTypCd == "A" && result[i].dealSttsCd == "TP"){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
-				html += '<div  >';
+				html += '<div>';
 				html += '<div class="item-div-img active-on">';
 				//작품 이미지
-				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
+				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
-				html += '<div class="item-ho">';
-				html += '<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
- 				html += '<p> 응찰수 : '+ result[i].bidCnt +'</p>';
- 				html += '<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
- 				html += '<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
- 				html += '<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
- 				html += '<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
- 				html += '<h4>시작가 '+ result[i].dealStrtPrc +' KRW</h4>';
+				html += '		<div class="item-ho">';
+				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
+ 				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
+ 				html += '			<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
+ 				html += '			<h4>시작가 '+ result[i].dealStrtPrc +' KRW</h4>';
 				
 				/* html += '			<p class="ts-2">';
 				html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
@@ -147,7 +144,7 @@ function myCollectionList(){
 					html += '			<h4>입찰가 : '+ formatComma(result[i].maxBidPrc) +'</h4>';	
 				} */
 				
-				html += '</div>';
+				html += '		</div>';
 				
 				html += '</div>'
 				
@@ -210,10 +207,7 @@ function myCollectionList(){
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
-	 			html += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
-	 			html += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
-	 			html += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
-	 			html += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
+	 			html += '				<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
 	 			html += '		</div>';
 				html += '</div>';
 				html += '<div class="item-body">';
@@ -402,7 +396,29 @@ function myCollectionList(){
 		modalAlertShow("검색 결과가 없습니다.");
     }
 }
-
+//거래 남은 시간 1초마다 계산해서 표현하기
+setInterval(function() {
+	var elements = document.querySelectorAll(".dealCount");
+	for(var i=0; i<elements.length; i++){
+		var html = '';
+		var dday = new Date(elements[i].attributes.dday.value).getTime();
+		var today = new Date().getTime();
+		if(today >= dday){
+			dealSearch();
+		}
+	  	var gap = dday - today;
+		var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
+		var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60) - 1);
+		var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
+		var sec = Math.ceil((gap % (1000 * 60)) / 1000);
+		html += '<li>'+ day +'<span>day</span></li>';
+		html += '<li>'+ hour +'<span>hrs</span></li>';
+		html += '<li>'+ min +'<span>min</span></li>';
+		html += '<li>'+ sec +'<span>sec</span></li>';
+		elements[i].innerHTML = html;
+	  	//document.getElementById("dealCount").innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
+	}
+}, 1000);
 $(document).on("click", ".cor-a", function(){
 	var workSq= $(this).attr("workSq");
     location.href = "/myCollectionMod?workSq="+workSq;
