--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -110,19 +110,16 @@ function myWorkList(){
 			if(result[i].dealTypCd == "A" && result[i].dealSttsCd == "TP"){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
-				html += '<div  >';
+				html += '<div>';
 				html += '<div class="item-div-img active-on">';
 				//작품 이미지
-				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
+				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
-				html += '<div class="item-ho">';
-				html += '<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
- 				html += '<p> 응찰수 : '+ result[i].bidCnt +'</p>';
- 				html += '<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
- 				html += '<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
- 				html += '<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
- 				html += '<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
- 				html += '<h4>시작가 '+ result[i].dealStrtPrc +' KRW</h4>';
+				html += '		<div class="item-ho">';
+				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
+ 				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
+ 				html += '			<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
+ 				html += '			<h4>시작가 '+ result[i].dealStrtPrc +' KRW</h4>';
 				
 				/* html += '			<p class="ts-2">';
 				html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
@@ -135,7 +132,7 @@ function myWorkList(){
 					html += '			<h4>입찰가 : '+ formatComma(result[i].maxBidPrc) +'</h4>';	
 				} */
 				
-				html += '</div>';
+				html += '		</div>';
 				
 				html += '</div>'
 				
@@ -164,11 +161,6 @@ function myWorkList(){
 					} else {
 						html += '<h4>입찰가 0 KRW</h4>';
 					}
- 				html += '			<p class="ts-2">';
- 				html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
- 				html += '			응찰수 : '+ result[i].bidCnt +'<br/>';
- 				html += '			'+ result[i].dealRemainingDay +'일 '+ result[i].dealRemainingHour +'시 '+ result[i].dealRemainingMin +'분 '+ result[i].dealRemainingSec +'초';
- 				html += '			</p>';
  			}
 				
 				html += '</div>'
@@ -187,7 +179,7 @@ function myWorkList(){
 				html += '</div>';
 				
 			}
-			
+			debugger;
 			//판매 - 거래진행중
 			if(result[i].dealTypCd == "S" && result[i].dealSttsCd == "TP"){
 				
@@ -198,10 +190,7 @@ function myWorkList(){
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
-	 			html += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
-	 			html += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
-	 			html += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
-	 			html += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
+	 			html += '				<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
 	 			html += '		</div>';
 				html += '</div>';
 				html += '<div class="item-body">';
@@ -222,6 +211,7 @@ function myWorkList(){
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
+				debugger;
 				html += '<h4>판매가 '+ formatComma(result[i].dealStrtPrc) +' KRW</h4>';
 				html += '</div>'
 				
@@ -269,7 +259,7 @@ function myWorkList(){
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
-					     					html += '</div>'
+				html += '</div>'
 				
 				html += '</div>';
 				
@@ -345,6 +335,29 @@ function myWorkList(){
     }
      
 }
+//거래 남은 시간 1초마다 계산해서 표현하기
+setInterval(function() {
+	var elements = document.querySelectorAll(".dealCount");
+	for(var i=0; i<elements.length; i++){
+		var html = '';
+		var dday = new Date(elements[i].attributes.dday.value).getTime();
+		var today = new Date().getTime();
+		if(today >= dday){
+			dealSearch();
+		}
+	  	var gap = dday - today;
+		var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
+		var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60) - 1);
+		var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
+		var sec = Math.ceil((gap % (1000 * 60)) / 1000);
+		html += '<li>'+ day +'<span>day</span></li>';
+		html += '<li>'+ hour +'<span>hrs</span></li>';
+		html += '<li>'+ min +'<span>min</span></li>';
+		html += '<li>'+ sec +'<span>sec</span></li>';
+		elements[i].innerHTML = html;
+	  	//document.getElementById("dealCount").innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
+	}
+}, 1000);
 
  $(window).on("resize", function () {
 	 
