--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -62,7 +62,7 @@
 			<!-- 신진 작가 -->
 			<div class="contents max-1500" id="div_upAndComingArtist">
 				<div class="cont-title3">
-					<h3>신진 작가</h3>
+					<h3>신진 작가<span>2017~2022년 데뷔한 작가입니다.</span></h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-1">
